<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/home_icon"
            android:title="@string/home"
            />

        <item
            android:id="@+id/data"
            android:icon="@drawable/folder_icon"
            android:title="@string/data"

            />

        <item
            android:id="@+id/info"
            android:icon="@drawable/info_icon"
            android:title="@string/info"
            />

    </group>

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/menudivider"
            app:actionLayout="@layout/menu_divider"
            app:showAsAction="ifRoom"
            android:checkable="false"
            />

        <item
            android:id="@+id/operators"
            android:icon="@drawable/wrench_icon"
            android:title="@string/manage_ops"
            />

        <item
            android:id="@+id/requests"
            app:actionLayout="@layout/custom_sidemenu_request"
            app:showAsAction="always"
            />
    </group>

    <group
        android:checkableBehavior="single">
        <item
            android:title="">
            <menu>
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/logout"
                    />
            </menu>
        </item>
    </group>


</menu>