<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home_header">

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:text="@string/re_hand"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/connect_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/connect_prompt"
            android:textColor="@color/textprompt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName"
            app:layout_constraintVertical_bias="0.277" />

        <Button
            android:id="@+id/connect_btn"
            android:layout_width="275dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/blue1"
            android:text="@string/str_connect_btn"
            android:textStyle="bold"
            android:layout_marginTop="50sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/connect_prompt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/home_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/home_header"
        android:layout_marginTop="0dp">

        <TextView
            android:id="@+id/discover_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/discovered_device"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/no_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/discover_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/no_device"
            android:textColor="@color/textprompt"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/discover_title" />

        <TextView
            android:id="@+id/str_emg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="96dp"
            android:layout_marginTop="119dp"
            android:text="EMG: "
            android:textSize="16sp" />

        <TextView
            android:id="@+id/val_emg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="119dp"
            android:text=""
            android:textSize="16sp" />

        <TextView
            android:id="@+id/str_flex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="96dp"
            android:layout_marginTop="149dp"
            android:text="Flex: "
            android:textSize="16sp" />

        <TextView
            android:id="@+id/val_flex1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="149dp"
            android:text=""
            android:textSize="16sp" />

        <TextView
            android:id="@+id/val_flex2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="190dp"
            android:layout_marginTop="149dp"
            android:text=""
            android:textSize="16sp" />

        <TextView
            android:id="@+id/val_flex3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="150dp"
            android:layout_marginTop="189dp"
            android:text=""
            android:textSize="16sp" />

        <TextView
            android:id="@+id/val_flex4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="190dp"
            android:layout_marginTop="189dp"
            android:text=""
            android:textSize="16sp" />

        <TextView
            android:id="@+id/val_flex5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="220dp"
            android:layout_marginTop="189dp"
            android:text=""
            android:textSize="16sp" />


        <TextView
            android:id="@+id/str_acce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="96dp"
            android:layout_marginTop="220dp"
            android:text="Accelerometer: "
            android:textSize="16sp" />

        <TextView
            android:id="@+id/val_acce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="230dp"
            android:layout_marginTop="220dp"
            android:text=""
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/tempswipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="200dp"
        android:text="Click" />

</RelativeLayout>